--- a/src/components/seo/StructuredData.astro
+++ b/src/components/seo/StructuredData.astro
@@ -12,7 +12,7 @@ const organizationSchema = {
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": brand.name,
-  "alternateName": "Fearnbell",
+  "alternateName": "Outcome Digital",
   "url": Astro.site,
   "logo": new URL('/logo.png', Astro.site),
   "description": brand.valueProposition,
