--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,9 @@ const canonicalURL = Astro.site ? new URL(Astro.url.pathname, Astro.site) : Astr
     <meta name="description" content={description} />
     <meta name="keywords" content={keywords} />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/outcome-logo.png" />
+    <link rel="shortcut icon" href="/outcome-logo.png" />
+    <link rel="apple-touch-icon" href="/outcome-logo.png" />
     <meta name="generator" content={Astro.generator} />
     
     <!-- SEO Meta Tags -->
